[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/types", 
    "crates/util",
]

[workspace.dependencies]
# CometBFT / ABCI
tendermint = "0.38"
tendermint-abci = "0.38"
tendermint-proto = "0.38"

# Storage
sled = "0.34"

# VRF & Crypto
vrf = "0.2"
p256 = "0.13"
sha2 = "0.10"
blake3 = "1.5"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
prost = "0.12"

# Network & async
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
futures = "0.3"
bytes = "1.0"

# Utilities
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true