[workspace]
resolver = "2"
members = [
    "crates/node",
    "crates/app", 
    "crates/types",
    "crates/storage",
]

[workspace.dependencies]
# CometBFT / ABCI - tower-abci approach (latest)
tower-abci = "0.19"
tendermint = "0.40"
tendermint-proto = "0.40"

# Storage
sled = "0.34"

# VRF & Crypto - fastcrypto approach  
fastcrypto = "0.1"
sha2 = "0.10"
blake3 = "1.5"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.21"

# Network & async
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4", features = ["util", "limit", "buffer"] }
futures = "0.3"
bytes = "1.0"

# HTTP server for client API
axum = "0.7"
reqwest = { version = "0.11", features = ["json"] }

# Utilities
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true