[package]
name = "mychain-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
blake3.workspace = true
bytes.workspace = true
futures.workspace = true
hex.workspace = true
mychain-types = { path = "../types" }
mychain-util = { path = "../util" }
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
tendermint.workspace = true
tendermint-abci.workspace = true
tendermint-proto.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "mychain"
path = "src/main.rs"