[package]
name = "mychain-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace crates
mychain-types = { path = "../types" }
mychain-storage = { path = "../storage" }

# ABCI & CometBFT - tower-abci approach
tower-abci = { workspace = true }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }

# VRF & Crypto - fastcrypto approach
fastcrypto = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }
tower = { workspace = true }
bytes = { workspace = true }

# Serialization
serde = { workspace = true }
bincode = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }