[package]
name = "mychain-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mychain-node"
path = "src/main.rs"

[dependencies]
# Workspace crates
mychain-app = { path = "../app" }
mychain-types = { path = "../types" }
mychain-storage = { path = "../storage" }

# ABCI & CometBFT
tower-abci = { workspace = true }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }

# Async runtime
tokio = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }

# HTTP server for client API
axum = { workspace = true }
reqwest = { workspace = true }

# Crypto & encoding
blake3 = { workspace = true }
base64 = "0.21"

# Utilities
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }