[package]
name = "mychain-util"
version = "0.1.0"
edition = "2021"

[dependencies]
vrf.workspace = true
p256.workspace = true
sha2.workspace = true
blake3.workspace = true
sled.workspace = true
serde.workspace = true
bincode.workspace = true
rand.workspace = true
anyhow.workspace = true
thiserror.workspace = true
mychain-types = { path = "../types" }
hex.workspace = true

[dev-dependencies]
tempfile = "3.8"